--- a/2test.ipynb
+++ b/2test.ipynb
@@ -1183,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1197,7 +1197,7 @@
       "Enter a number: 5\n",
       "Enter a number: stop\n",
       "Total : 20.0 \n",
-      "Count : 5 \n",
+      "Count : 6 \n",
       "Average  3.3333333333333335\n"
      ]
     }
@@ -1214,7 +1214,8 @@
     "        n1 = float(n)\n",
     "    n1 = n1+1\n",
     "    t = t + n1\n",
-    "print (\"Total :\",t,\"\\nCount :\",int(n1-1),\"\\nAverage \",t/n1)"
+    "print (\"Total :\",t,\"\\nCount :\",int(n1),\"\\nAverage \",t/n1)\n",
+    "\n"
    ]
   },
   {
@@ -1259,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1282,7 +1283,7 @@
     "else:\n",
     "    for i in range(1,n + 1):\n",
     "       fact = fact*i\n",
-    "       print(\"The factorial of\",n,\"is\",fact)"
+    "    print(\"The factorial of\",n,\"is\",fact)"
    ]
   },
   {
@@ -1309,7 +1310,7 @@
     "else:\n",
     "    for i in range(1,n + 1):\n",
     "       fact = fact*i\n",
-    "       print(\"The factorial of\",n,\"is\",fact)"
+    "    print(\"The factorial of\",n,\"is\",fact)"
    ]
   },
   {
@@ -1336,7 +1337,7 @@
     "else:\n",
     "    for i in range(1,n + 1):\n",
     "       fact = fact*i\n",
-    "       print(\"The factorial of\",n,\"is\",fact)"
+    "    print(\"The factorial of\",n,\"is\",fact)"
    ]
   },
   {
@@ -1425,98 +1426,6 @@
     "if c==0:\n",
     "    print(n,\"is prime number\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "338350\n"
-     ]
-    }
-   ],
-   "source": [
-    "s = 0\n",
-    "ss=0\n",
-    "for i in range(1, 101):\n",
-    "    s = s + (i**2)\n",
-    "    \n",
-    "print(s)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "114480722500"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "338350**2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "114480384150"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "114480722500-338350"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter a number: 1\n",
-      "Enter a number: 2\n",
-      "Enter a number: 3\n",
-      "Enter a number: 4\n",
-      "Enter a number: 5\n",
-      "Enter a number: stop\n",
-      "Total : 20.0 \n",
-      "Count : 5 \n",
-      "Average  3.3333333333333335\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
