--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -848,21 +848,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input a number: 11\n",
+      "Input a number: 15\n",
       "Numbers : \n",
       "3\n",
       "5\n",
       "6\n",
       "9\n",
       "10\n",
-      "Sum =  33\n"
+      "12\n",
+      "15\n",
+      "Sum =  60\n"
      ]
     }
    ],
@@ -878,7 +880,7 @@
     "    elif i % 5 == 0:\n",
     "        c = c + i\n",
     "        print(i)\n",
-    "print (\"Sum = \" ,c)\n"
+    "print (\"Sum = \" ,c)"
    ]
   },
   {
@@ -910,9 +912,7 @@
     "        c=c*i\n",
     "else :\n",
     "    print(\"Wrong input\")\n",
-    "print(c)\n",
-    "        \n",
-    "        \n"
+    "print(c)"
    ]
   },
   {
@@ -3307,7 +3307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -3315,10 +3315,7 @@
      "output_type": "stream",
      "text": [
       "Sorted a : [1, 2, 3, 4, 6]\n",
-      "2 - 1\n",
-      "3 - 2\n",
-      "4 - 3\n",
-      "3\n"
+      "max= 3\n"
      ]
     }
    ],
@@ -3329,12 +3326,11 @@
     "a.sort()\n",
     "print(\"Sorted a :\",a)\n",
     "for i in range (len(a)-1):\n",
-    "    if a[i+1]-a[i]==1:\n",
+    "    if a[i+1]-a[i]<=1:\n",
     "        c=c+1\n",
-    "        print(a[i+1],'-',a[i])\n",
     "    else:\n",
     "        pass\n",
-    "print(c)"
+    "print('max=',c)"
    ]
   },
   {
@@ -3451,6 +3447,497 @@
     "print(\"sorted list is :\",a)\n",
     "print(\"Minimum number is\",a[0])\n",
     "print(\"max is :\",a[len(a)-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#tuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2.6, 'python')\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1\n",
+    "mytuple = 1,2.6,'python'\n",
+    "print(mytuple)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2.6\n",
+      "python\n"
+     ]
+    }
+   ],
+   "source": [
+    "#2\n",
+    "a,b,c=mytuple\n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 4)\n",
+      "enter the variable to be enteredhello\n",
+      "(1, 2, 3, 4, 'hello')\n"
+     ]
+    }
+   ],
+   "source": [
+    "#3\n",
+    "mytuple = 1,2,3,4 \n",
+    "print(mytuple)\n",
+    "a=input(\"enter the variable to be entered\")\n",
+    "q=list(mytuple)\n",
+    "q.append(a)\n",
+    "mytuple=tuple(q)\n",
+    "print(mytuple)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the times number to be entered : 5\n",
+      "Enter the number to be entered : 1\n",
+      "Enter the number to be entered : 2\n",
+      "Enter the number to be entered : 3\n",
+      "Enter the number to be entered : 4\n",
+      "Enter the number to be entered : 5\n",
+      "(1, 2, 3, 4, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "##input a tuple\n",
+    "d=int(input(\"Enter the times number to be entered : \"))\n",
+    "a=[]\n",
+    "for i in range (0,d):\n",
+    "    c=int(input(\"Enter the number to be entered : \"))\n",
+    "    a.append(c)\n",
+    "q=tuple(a)\n",
+    "print(q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the times number to be entered : 6\n",
+      "Enter the number to be entered : 3\n",
+      "Enter the number to be entered : 2\n",
+      "Enter the number to be entered : 4\n",
+      "Enter the number to be entered : 5\n",
+      "Enter the number to be entered : 1\n",
+      "Enter the number to be entered : 2\n",
+      "(3, 2, 4, 5, 1, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "tup = () \n",
+    "d=int(input(\"Enter the times number to be entered : \"))\n",
+    "for i in range(0,d):\n",
+    "    c=int(input(\"Enter the number to be entered : \"))\n",
+    "    tup = tup + (c,)\n",
+    "print(tup)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##4\n",
+    "d=int(input(\"Enter the times number to be entered : \"))\n",
+    "a=[]\n",
+    "for i in range (0,d):\n",
+    "    c=input(\"Enter the number to be entered : \")\n",
+    "    a.append(c)\n",
+    "q=tuple(a)\n",
+    "print(\"Tuple is :\",q)\n",
+    "s =  ''.join(q)\n",
+    "print(\"String is :\",s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the times number to be entered : 5\n",
+      "Enter the number to be entered : 1\n",
+      "Enter the number to be entered : 3\n",
+      "Enter the number to be entered : 1\n",
+      "Enter the number to be entered : 5\n",
+      "Enter the number to be entered : 3\n",
+      "Tuple is : (1, 3, 1, 5, 3)\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "#5\n",
+    "tup = () \n",
+    "z=0\n",
+    "x=0\n",
+    "d=int(input(\"Enter the times number to be entered : \"))\n",
+    "for i in range(0,d):\n",
+    "    c=int(input(\"Enter the number to be entered : \"))\n",
+    "    tup = tup + (c,)\n",
+    "print(\"Tuple is :\",tup)\n",
+    "for i in tup:\n",
+    "    x=x+1\n",
+    "    for j in tup[x:]:\n",
+    "        if i==j:\n",
+    "            z=z+1\n",
+    "print(z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the times number to be entered : 5\n",
+      "Enter the number to be entered : 1\n",
+      "Enter the number to be entered : 3\n",
+      "Enter the number to be entered : 4\n",
+      "Enter the number to be entered : 5\n",
+      "Enter the number to be entered : 1\n",
+      "(1, 3, 4, 5, 1)\n",
+      "enter number to be searched:3\n",
+      "The number is in the tuple\n"
+     ]
+    }
+   ],
+   "source": [
+    "#6\n",
+    "tup = () \n",
+    "g=0\n",
+    "d=int(input(\"Enter the times number to be entered : \"))\n",
+    "for i in range(0,d):\n",
+    "    c=int(input(\"Enter the number to be entered : \"))\n",
+    "    tup = tup + (c,)\n",
+    "print(tup)\n",
+    "x=int(input(\"enter number to be searched:\"))\n",
+    "for i in tup:\n",
+    "    if i==x:\n",
+    "        g=1\n",
+    "        print(\"The number is in the tuple\")\n",
+    "    else:\n",
+    "        pass\n",
+    "if g==0:\n",
+    "    print(\"Can't find the number in the tuple\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the times number to be entered : 5\n",
+      "Enter the number to be entered : 4\n",
+      "Enter the number to be entered : 3\n",
+      "Enter the number to be entered : 5\n",
+      "Enter the number to be entered : 7\n",
+      "Enter the number to be entered : 2\n",
+      "(4, 3, 5, 7, 2)\n",
+      "enter number to be searched:0\n",
+      "Can't find the number in the tuple\n"
+     ]
+    }
+   ],
+   "source": [
+    "#6\n",
+    "tup = () \n",
+    "g=0\n",
+    "d=int(input(\"Enter the times number to be entered : \"))\n",
+    "for i in range(0,d):\n",
+    "    c=int(input(\"Enter the number to be entered : \"))\n",
+    "    tup = tup + (c,)\n",
+    "print(tup)\n",
+    "x=int(input(\"enter number to be searched:\"))\n",
+    "for i in tup:\n",
+    "    if i==x:\n",
+    "        g=1\n",
+    "        print(\"The number is in the tuple\")\n",
+    "    else:\n",
+    "        pass\n",
+    "if g==0:\n",
+    "    print(\"Can't find the number in the tuple\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the times number to be entered : 5\n",
+      "enter the variable to be entered :4\n",
+      "enter the variable to be entered :3\n",
+      "enter the variable to be entered :3\n",
+      "enter the variable to be entered :6\n",
+      "enter the variable to be entered :2\n",
+      "[4, 3, 3, 6, 2]\n",
+      "(4, 3, 3, 6, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#7\n",
+    "q=[]\n",
+    "d=int(input(\"Enter the times number to be entered : \"))\n",
+    "for i in range(0,d):\n",
+    "    a=int(input(\"enter the variable to be entered :\"))\n",
+    "    q.append(a)\n",
+    "print(q)\n",
+    "mytuple=tuple(q)\n",
+    "print(mytuple)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tuple is : (1, 2, 3, 4, 5, 6)\n",
+      "enter the variable to be removed :5\n",
+      "(1, 2, 3, 4, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#8\n",
+    "a=(1,2,3,4,5,6)\n",
+    "print(\"tuple is :\",a)\n",
+    "c=int(input(\"enter the variable to be removed :\"))\n",
+    "q=list(a)\n",
+    "q.remove(c)\n",
+    "a=tuple(q)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter number :3\n",
+      "Number not found tuple\n"
+     ]
+    }
+   ],
+   "source": [
+    "#9\n",
+    "#wrong output got it right on next one\n",
+    "a=1,9,3,4,5\n",
+    "c=0\n",
+    "x=0\n",
+    "z=int(input(\"enter number :\"))\n",
+    "for i in a:\n",
+    "    if a==z:\n",
+    "        c=c+1\n",
+    "        x=1\n",
+    "        print(\"index is \",c)\n",
+    "    else:\n",
+    "        pass\n",
+    "if x==0:\n",
+    "    print(\"Number not found tuple\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter number :5\n",
+      "index is  5\n"
+     ]
+    }
+   ],
+   "source": [
+    "#9\n",
+    "a=1,9,3,4,5\n",
+    "c=0\n",
+    "x=0\n",
+    "z=int(input(\"enter number :\"))\n",
+    "for i in range(len(a)):\n",
+    "    if a[i]==z:\n",
+    "        c=c+1\n",
+    "        x=1\n",
+    "        print(\"index is \",(i+1))\n",
+    "    else:\n",
+    "        pass\n",
+    "if x==0:\n",
+    "    print(\"Number not found tuple\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the times number to be entered : 5\n",
+      "Enter the number to be entered : 4\n",
+      "Enter the number to be entered : 6\n",
+      "Enter the number to be entered : 7\n",
+      "Enter the number to be entered : 8\n",
+      "Enter the number to be entered : 1\n",
+      "Original tuple is : (4, 6, 7, 8, 1)\n",
+      "Reverse tuple is : (1, 8, 7, 6, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#10\n",
+    "tup = () \n",
+    "d=int(input(\"Enter the times number to be entered : \"))\n",
+    "for i in range(0,d):\n",
+    "    c=int(input(\"Enter the number to be entered : \"))\n",
+    "    tup = tup + (c,)\n",
+    "print(\"Original tuple is :\",tup)\n",
+    "rev=tup[::-1]\n",
+    "print(\"Reverse tuple is :\",rev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 1, 2: 4, 3: 9, 4: 16, 5: 25, 6: 36, 7: 49, 8: 64, 9: 81, 10: 100}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#11\n",
+    "d={}\n",
+    "for i in range(1,11):\n",
+    "    d[i]=i**2\n",
+    "print(d)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#d={}\n",
+    "#help(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 10, 2: 20, 3: 30, 4: 40, 5: 50, 6: 60}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#14\n",
+    "d1={1:10, 2:20}\n",
+    "d2={3:30, 4:40}\n",
+    "d3={5:50,6:60}\n",
+    "d4 = {}\n",
+    "for d in (d1, d2, d3): \n",
+    "    d4.update(d)\n",
+    "print(d4)"
    ]
   },
   {
